--- a/nosotros/derecho/index.html
+++ b/nosotros/derecho/index.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="../../assets/img/favicon.png" rel="icon">
+  <link href="../../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -18,13 +18,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="../../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../../assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="../../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="../../assets/css/main.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: ZenBlog
@@ -40,7 +40,7 @@
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container position-relative d-flex align-items-center justify-content-between">
 
-      <a href="./" class="logo d-flex align-items-center me-auto me-xl-0">
+      <a href="../../" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <h1 class="sitename">Círculo de Estudios Chinos</h1>
@@ -49,18 +49,18 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <!--<li><a href="index.html">Home</a></li>-->
-           <li class="dropdown"><a href="about.html"><span>Nosotros</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+           <li class="dropdown"><a href="../"><span>Nosotros</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="about.html">CECH</a></li>
-              <li><a href="derecho.html">Sección Derecho</a></li>
-              <li><a href="economia.html">Sección Economía</a></li>
-              <li><a href="literatura.html">Sección Literatura</a></li>
+              <li><a href="../">CECH</a></li>
+              <li><a href="./">Sección Derecho</a></li>
+              <li><a href="../economia/">Sección Economía</a></li>
+              <li><a href="../literatura/">Sección Literatura</a></li>
             </ul>
           </li>
-          <li><a href="publicaciones.html">Publicaciones</a></li>
-          <li><a href="noticias.html">#Noticias</a></li>
-          <li><a href="eventos.html">Eventos</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="../../publicaciones/">Publicaciones</a></li>
+          <li><a href="../../noticias/">#Noticias</a></li>
+          <li><a href="../../eventos/">Eventos</a></li>
+          <li><a href="../../contacto/">Contacto</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -83,7 +83,7 @@
         <h1 class="mb-2 mb-lg-0">Sobre el Círculo de Estudios Chinos</h1>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="./">Inicio</a></li>
+            <li><a href="../../">Inicio</a></li>
             <li class="current">Nosotros</li>
           </ol>
         </nav>
@@ -112,15 +112,15 @@
           <div class="col-lg-6 about-images" data-aos="fade-up" data-aos-delay="200">
             <div class="row gy-4">
               <div class="col-lg-6">
-                <img src="assets/img/circulo-derecho.png" class="img-fluid" alt="">
+                <img src="../../assets/img/circulo-derecho.png" class="img-fluid" alt="">
               </div>
               <div class="col-lg-6">
                 <div class="row gy-4">
                   <div class="col-lg-12">
-                    <img src="assets/img/about-company-2.jpg" class="img-fluid" alt="">
+                    <img src="../../assets/img/about-company-2.jpg" class="img-fluid" alt="">
                   </div>
                   <div class="col-lg-12">
-                    <img src="assets/img/about-company-3.jpg" class="img-fluid" alt="">
+                    <img src="../../assets/img/about-company-3.jpg" class="img-fluid" alt="">
                   </div>
                 </div>
               </div>
@@ -150,7 +150,7 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/team-1.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="../../assets/img/team/team-1.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Walter White</h4>
                 <span>Chief Executive Officer</span>
@@ -167,7 +167,7 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="../../assets/img/team/team-2.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Sarah Jhonson</h4>
                 <span>Product Manager</span>
@@ -184,7 +184,7 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
             <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="../../assets/img/team/team-3.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>William Anderson</h4>
                 <span>CTO</span>
@@ -201,7 +201,7 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
             <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="../../assets/img/team/team-4.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Amanda Jepson</h4>
                 <span>Accountant</span>
@@ -229,7 +229,7 @@
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
-          <a href="./" class="logo d-flex align-items-center">
+          <a href="../../" class="logo d-flex align-items-center">
             <span class="sitename">Círculo de Estudios Chinos</span>
           </a>
           <div class="footer-contact pt-3">
@@ -252,33 +252,11 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Enlaces</h4>
           <ul>
-            <li><a href="./">Inicio</a></li>
-            <li><a href="about.html">Nosotros</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Terms of service</a></li>
-            <li><a href="#">Privacy policy</a></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
-          <ul>
-            <li><a href="#">Web Design</a></li>
-            <li><a href="#">Web Development</a></li>
-            <li><a href="#">Product Management</a></li>
-            <li><a href="#">Marketing</a></li>
-            <li><a href="#">Graphic Design</a></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Hic solutasetp</h4>
-          <ul>
-            <li><a href="#">Molestiae accusamus iure</a></li>
-            <li><a href="#">Excepturi dignissimos</a></li>
-            <li><a href="#">Suscipit distinctio</a></li>
-            <li><a href="#">Dilecta</a></li>
-            <li><a href="#">Sit quas consectetur</a></li>
+            <li><a href="../../">Inicio</a></li>
+            <li><a href="../../nosotros/">Nosotros</a></li>
+            <li><a href="../../publicaciones/">Publicaciones</a></li>
+            <li><a href="../../noticias/">#Noticias</a></li>
+            <li><a href="../../eventos/">Eventos</a></li>
           </ul>
         </div>
 
@@ -316,13 +294,13 @@
   <div id="preloader"></div>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../../assets/vendor/php-email-form/validate.js"></script>
+  <script src="../../assets/vendor/aos/aos.js"></script>
+  <script src="../../assets/vendor/swiper/swiper-bundle.min.js"></script>
 
   <!-- Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="../../assets/js/main.js"></script>
 
 </body>
 
