--- a/nosotros/economia/index.html
+++ b/nosotros/economia/index.html
@@ -122,7 +122,7 @@
           <div class="col-lg-6 about-images" data-aos="fade-up" data-aos-delay="200">
             <div class="row gy-4">
               <div class="col-lg-6">
-                <img src="../../assets/img/circulo-economia.png" class="img-fluid" alt="">
+                <img src="img/circulo-economia.png" class="img-fluid" alt="">
               </div>
               <div class="col-lg-6">
                 <div class="row gy-4">
@@ -160,7 +160,7 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <div class="team-member d-flex align-items-start">
-              <div class="pic"><img src="../../assets/img/team/yo2.jpeg" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="img/Coordinador.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Fernando Mendoza</h4>
                 <span>Coordinador</span>
