--- a/publicaciones/reseñas/Como-china-se-volvio-capitalista/index.html
+++ b/publicaciones/reseñas/Como-china-se-volvio-capitalista/index.html
@@ -71,6 +71,13 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
+      <!-- Logo entre contacto y redes sociales -->
+      <div class="logo-mini d-none d-lg-block">
+        <a href="https://confucio.pucp.edu.pe/" target="_blank" rel="noopener">
+          <img src="../../../assets/img/confucio-logo.png" alt="Logo Instituto Confucio PUCP" style="height: 40px; margin-left: 15px;">
+        </a>
+      </div>
+
       <div class="header-social-links">
         <!--<a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a></a>-->
         <a href="https://www.facebook.com/cechpucp" class="facebook"><i class="bi bi-facebook"></i>
